quick fix window overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,26 +1,27 @@
 body {
-        margin: 0;
-        background-color: black;
-      }
-      #container {
-        background-color: black;
-        
-        margin: auto;
-        align: center;
-      }
-      #scoreboard {
-        text-align: center;
-        font-family: Segoe UI, Helvetica, Ubuntu, sans-serif;
-        color: white;
-      }
-      #scores {
-        font-size:600%; 
-        padding:0; 
-        margin:0;
-        color: white;
-      }
-      #title {
-        background-color: white;
-        color: black;
-      }
-      
+  margin: 0;
+  padding: 0;
+  background-color: black;
+  overflow: hidden;
+}
+#container {
+  background-color: black;
+
+  margin: auto;
+  align: center;
+}
+#scoreboard {
+  text-align: center;
+  font-family: Segoe UI, Helvetica, Ubuntu, sans-serif;
+  color: white;
+}
+#scores {
+  font-size:600%; 
+  padding:0; 
+  margin:0;
+  color: white;
+}
+#title {
+  background-color: white;
+  color: black;
+}
